# py_dummy_service

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GitVersion.yml  Makefile  README.md  config.py  index.yaml  py-dummy-service-1.1.2.tgz  py-dummy-service-1.2.0.tgz  py-dummy-service-1.2.1.tgz  py-dummy-service-1.3.0.tgz  py-dummy-service-1.4.0.tgz  py-dummy-service-1.5.0.tgz  py-dummy-service-1.6.0.tgz  requirements.txt  setup.cfg
.github/workflows/: changelog.yml  codecov.yml  helm_chart.yml  release.yml
charts/: Chart.yaml  values.yaml
charts/py-dummy-service/: Chart.yaml  README.md  values.yaml
charts/py-dummy-service/templates/: NOTES.txt  _helpers.tpl  deployment.yaml
charts/py-dummy-service/templates/tests/: test-connection.yaml
charts/templates/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
deploy/docker-compose/: docker-compose.yml
deploy/kubernetes/: README.md  deployment.yaml  service.yaml
docs/: pre-commit-hooks.md
py_dummy_service/: __init__.py  api.py  backend.py  errors.py  healthz.py  main.py
tests/: conftest.py  test_api.py  test_backend.py  test_errors.py  test_main.py
