[metadata]
name = py_dummy_service
version = 1.0.0
url = https://github.com/bcochofel/py-dummy-service
license = MIT
maintainer = Bruno Cochofel
maintainer_email = bruno.cochofel@gmail.com
description = Python Flask Dummy Service.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
Flask

[options.extras_require]
test =
pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
py_dummy_service
