[metadata]
name = attr: py_dummy_service.__app_name__
version = attr: py_dummy_service.__app_version__
url = https://github.com/bcochofel/py-dummy-service
license = MIT
maintainer = Bruno Cochofel
maintainer_email = bruno.cochofel@gmail.com
description = Python Flask Dummy Service.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires = Flask, prometheus-flask-exporter, flask-healthz, requests, flask-restx

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = py_dummy_service
